@@ -1762,6 +1762,11 @@ pGEDevDesc GNewPlot(Rboolean recording)
     /* we can call par(mfg) before any plotting.
        That sets new = TRUE and also sets currentFigure <= lastFigure
        so treat separately. */
+
+    /* The logic for when to start a new page is mimiced in the
+     * read-only par("page") in par.c, SO if you make changes
+     * to the logic here, you will need to change that as well
+     */
     if (!gpptr(dd)->new) {
 	R_GE_gcontext gc;
 	gcontextFromGP(&gc, dd);
